# J.A.R.V.I.S

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  Project_Report.md  README.md  Report.txt  Resilience_Report.txt  package.json  run-jarvis.ps1  run-jarvis.sh
backend/: .env  README.md  build-sidecar.ps1  deploy.ps1  jarvis_core.spec  main.py  nexus_routes.py  pom.xml  requirements.lock.txt  requirements.txt  settings.xml  stt_service.py  test_tts.py  testing_log.txt  transcription.txt  tts_service.py
backend/core/: __init__.py  memory.py  paths.py  processor.py  sandbox.py  secure_storage.py  security.py  tool_registry.py  vision.py
backend/memory_db/: chroma.sqlite3
backend/scratch/: purge_stark.py  test_security.py
frontend/: .env  .env.example  .eslintrc.js  README.md  package.json  start-backend.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  constants.js  index.css
frontend/src/component/: BrainTerminal.js  Hero.css  Hero.js  Navbar.css  Navbar.js  NexusVault.js  PuterStatus.css  PuterStatus.js  SplashScreen.css  SplashScreen.js  SystemAlert.js  SystemConsole.js  SystemStatus.css  SystemStatus.js  TranslationTerminal.js  VoiceControl.css  VoiceControl.js  blob.js
frontend/src/hooks/: useBrain.js  useSpeech.js
frontend/src/services/: GroqService.js  TTSService.js
scratch/: dump_memory.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
(+23 files in other folders)
