[package]
name = "jarvis"
version = "3.2.0"
description = "J.A.R.V.I.S — Native Windows desktop AI assistant"
authors = ["Shubham"]
edition = "2021"
rust-version = "1.77"

# The library half is the Tauri-recommended pattern: keeps main.rs tiny and
# lets future mobile targets share the same `run()` entry point.
[lib]
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
tokio = { version = "1", features = ["time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"   # optimise for installer size — frontend is what users see
strip = true
